--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       - AUTH_KEY=${AUTH_KEY}
     command: npm run start
     network_mode: "host"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
 
 volumes:
   node_modules:
