--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
     "node-datachannel": "^0.20.0-alpha.2",
+    "public-ip": "^7.0.1",
     "tsx": "^4.19.1",
     "ws": "^8.18.0"
   },
