--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -36,8 +36,8 @@ jobs:
       - id: "install-dependencies"
         name: "Install Node.js dependencies"
         run: |
+          cd client
           set -euo pipefail
-
           pnpm install
 
       - id: "build"
